# thecomplainbox

./: .env.example  .gitignore  CRITICAL_IMPLEMENTATION.md  DIAGNOSE.ps1  QUICK_START.md  README.md  RUN_EVERYTHING.ps1  STARTUP_GUIDE.md  START_DEVELOPMENT.ps1  docker-compose.dev.yml  docker-compose.yml  package.json  startup.ps1
ai-service/: .gitignore  Dockerfile  config.py  gemini_client.py  main.py  ocr_processor.py  pyproject.toml  tfidf_engine.py
backend/: package-lock.json  package.json  server.js
backend/config/: database.js  mongodb.js  redis.js
backend/controllers/: adminController.js  authController.js  complaintController.js  dashboardController.js
backend/jobs/: escalationJob.js
backend/middleware/: auditLogger.js  auth.js  fileValidation.js  rateLimit.js  rbac.js
backend/models/: AuditLog.js  Committee.js  Complaint.js  ComplaintStatusLog.js  EvidenceFile.js  Feedback.js  User.js  index.js
backend/routes/: adminRoutes.js  authRoutes.js  complaintRoutes.js  dashboardRoutes.js  feedbackRoutes.js
backend/seeders/: seed.js
backend/services/: aiService.js  authService.js  complaintService.js  emailService.js  messageService.js
database/: mongodb-init.js  schema.sql
frontend/: .gitignore  FRONTEND_IMPLEMENTATION_GUIDE.md  PROGRESS_SUMMARY.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AppShell.jsx  Badge.jsx  Button.jsx  Card.jsx  ComplaintCard.jsx  DataTable.jsx  FileUpload.jsx  Modal.jsx  OTPInput.jsx  Pagination.jsx  ProtectedRoute.jsx  (+4 more)
(+32 files in other folders)
